--- a/oudfrontend/src/components/Profile/Commponents/UpperContainer/UpperContainer.css
+++ b/oudfrontend/src/components/Profile/Commponents/UpperContainer/UpperContainer.css
@@ -1,16 +1,26 @@
 .upperContainerProfile {
-  height: 250px;
+  height: 240px;
   background-image: linear-gradient(#424242, #141414);
-  padding: 10px 3% 0px;
+  padding: 10px 3% 10px;
   margin-bottom: 0px;
+  transition: 0.5s;
+}
+.upperNav {
+  height: 130px;
+  position: fixed;
+  background-color: #000000;
+  border-bottom: 1px solid #424242;
+  width: 100%;
+  transition: 0.5s;
 }
 .profile-links {
   margin: 0;
   padding: 0;
   text-align: left;
-  margin-top: 85px;
+  margin-top: 35px;
   clear: left;
 }
+
 .profile-links a {
   margin-left: 0;
   color: #f8f8f8;
@@ -31,12 +41,24 @@
 .upperContainerProfile p {
   color: aliceblue;
   font-size: 12px;
+  transition: 1s;
 }
 .upperContainerProfile h1 {
   font-size: 40px;
   font-weight: 1000;
+  transition: 0.25s;
 }
-
+.upperContainerProfile a {
+  transition: 0.25s;
+}
+.upperNav h1 {
+  font-size: 20px;
+  font-weight: 700;
+  transition: 0.25s;
+}
+.upperNav a {
+  transition: 0.25s;
+}
 .userImg-profile {
   float: left;
   width: 115px;
@@ -44,12 +66,80 @@
   margin: 30px auto;
   margin-right: 30px;
   border-radius: 50%;
+  transition: 0.5s;
+}
+.userImg-profile-scrolled {
+  float: left;
+  width: 50px;
+  height: 50px;
+  margin: 30px 40px 15px 30px;
+  transition: 0.5s;
+  border-radius: 50%;
 }
 .userName-profile {
   margin-top: 35px;
 }
+.userName-profile-scrolled {
+  margin-top: 40px;
+}
+
 .userName-profile-padding {
-  padding-top: 10px;
+  padding-top: 0px;
+}
+.upperContainerFollowingButton {
+  background-color: transparent;
+  color: #f9b835;
+  border-radius: 28px;
+  font-weight: 700;
+  font-size: 14px;
+  width: 170px;
+  margin: 0;
+  padding: 5px;
+  align-self: flex-start;
+  transition: transform 0.2s;
+  align-self: flex-end;
+  margin-top: 8px;
+}
+
+.upperContainerFollowingButton:hover {
+  transform: scale(1.05);
+  background-color: transparent;
+  color: #f9b835;
+}
+.upperContainerFollowingButton:active,
+.upperContainerFollowingButton:focus {
+  background-color: transparent;
+  color: #f9b835;
+}
+
+.upperContainerFollowButton {
+  background-color: transparent;
+  color: #ffffff;
+  border-radius: 28px;
+  font-weight: 700;
+  font-size: 14px;
+  width: 170px;
+  margin: 0;
+  padding: 5px;
+  transition: transform 0.2s;
+  align-self: flex-end;
+  margin-top: 8px;
+}
+
+.upperContainerFollowButton:hover {
+  transform: scale(1.05);
+  background-color: transparent;
+  color: #ffffff;
+}
+.upperContainerFollowButton:active,
+.upperContainerFollowButton:focus {
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.profileNave-button-right {
+  text-align: right;
+  width: 20%;
 }
 @media (max-width: 900px) {
   .profile-links a {
