--- a/oudfrontend/src/components/welcome_false/Body/Body.css
+++ b/oudfrontend/src/components/welcome_false/Body/Body.css
@@ -8,8 +8,7 @@
     width: 100%;
 }
 
-
-.welcomeText {
+.welcomeTextGeust {
     position: absolute;
     margin: 0 auto;
     left: 0;
@@ -20,8 +19,8 @@
 }
 
 @media (max-width: 1100px) {
-    .welcomeText {
-        top: 40%;
+    .welcomeTextGeust {
+        top: 35%;
     }
 
     h1 {
@@ -32,15 +31,15 @@
         font-size: 10px;
     }
 
-    .welcomeText button {
+    .welcomeTextGeust button {
         width: 32%;
         font-size: 100%;
     }
 }
 
 @media (max-width: 550px) {
-    .welcomeText {
-        top: 18%;
+    .welcomeTextGeust {
+        top: 33%;
     }
 }
 
@@ -56,6 +55,11 @@
         cursive;
     align-items: center;
     align-content: center;
+    margin-top: 7px;
+}
+.getOudBtn:hover {
+    background-color:#ffd071;
+    transition: 1s;
 }
 
 
