--- a/oudfrontend/src/components/welcome_true/Body/Body.css
+++ b/oudfrontend/src/components/welcome_true/Body/Body.css
@@ -6,45 +6,41 @@
     position: relative;
     display: inline-block;
     width: 100%;
-    /* Make the width of box same as image */
 }
 
-/* button {
-    color: white;
+.welcomeTextUser {
     position: absolute;
     margin: 0 auto;
     left: 0;
     right: 0;
-    top: 55%;
-    text-align: center;
-
-} */
-
-.welcomeText {
-    position: absolute;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 40%;
+    top: 30%;
     text-align: center;
     color: white;
 }
 
-@media (max-width: 600px) {
-    .welcomeText {
-        top: 30%;
+@media (max-width: 1100px) {
+    .welcomeTextUser {
+        top: 28%;
     }
-    h1{
-        font-size: 30px;
-    }
-    h6{
-        font-size: 10px;
-    }
-    .welcomeText button{
+
+    .welcomeTextUser button {
         width: 30%;
         font-size: 100%;
-
     }
+}
+
+@media (max-width: 700px) {
+    .welcomeTextUser {
+        top: 25%;
+    }
+
+}
+
+@media (max-width: 550 px) {
+    .welcomeTextUser {
+        top: 20%;
+    }
+
 }
 
 
@@ -60,4 +56,8 @@
         cursive;
     align-items: center;
     align-content: center;
+}
+
+Link {
+    color: white;
 }
