--- a/oudfrontend/src/components/welcome_true/item/cardlist/cardList.css
+++ b/oudfrontend/src/components/welcome_true/item/cardlist/cardList.css
@@ -2,10 +2,12 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 0px;
     grid-template-columns: 1fr 1fr 1fr;
     box-sizing: border-box;
+
 }
+
 .slider {
     display: block;
     list-style-type: disc;
@@ -13,17 +15,82 @@
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    
+    padding-inline-start: 5px;
+    margin: 0 auto;
+    float: none;
+    margin-bottom: 10px;
+}
+
+.container {
+    position: relative;
+}
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 999;
+
+}
+
+.hide {
+    opacity: 0;
+}
+
+.show {
+    opacity: 100%;
+}
+
+.half {
+    opacity: 70%;
+    transition: .5s ease;
+
+
+}
+
+.btn {
+    background-color: transparent;
+    color: white;
+    font-size: 15px;
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: white;
+}
+
+.container .middle {
+    background-color: rgba(black, black, black, 0.5);
+}
+
+.text {
+    background-color: rgba(black, black, black, 1);
+    color: white;
+    font-size: 25px;
+    padding: 16px 32px;
+    z-index: 999;
 }
 
 @media (max-width :700px) {
     .cartList {
-          white-space: nowrap;
+        white-space: nowrap;
         overflow-x: auto;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         width: 100%;
-        margin:  0 auto;
-       
+        margin: 0 auto;
+
     }
 }
