--- a/oudfrontend/src/components/Home/MusicItem/MusicItem.css
+++ b/oudfrontend/src/components/Home/MusicItem/MusicItem.css
@@ -26,7 +26,7 @@
 }
 
 .see-more {
-  margin-right: 50px !important;
+  margin-right: 50px;
   font-size: 18px;
   text-decoration: none;
   color: rgb(190, 185, 185);
