--- a/oudfrontend/src/components/Playlist/playlist.css
+++ b/oudfrontend/src/components/Playlist/playlist.css
@@ -1,11 +1,10 @@
 .playlist {
-  background-color: rgb(0, 0, 0);
+  background-color:rgna(0, 0, 0, .5);
   padding: 30px 32px;
   color: #b3b3b3;
   position: relative;
   min-height: 800px;
 }
-
 .playlistHeader {
   margin-bottom: 20px;
   padding-bottom: 20px;
@@ -23,11 +22,11 @@
 }
 
 .playlistAnchor:hover {
-  color: #fff;
+  color: #f9b835;
   text-decoration: underline;
 }
 .playlistAnchor {
-  color: #b3b3b3;
+  color: #916B49;
   margin-left: auto;
   margin-right: auto;
 }
@@ -38,7 +37,7 @@
   font-weight: bolder;
   font-size: 12px;
   line-height: 18px;
-  background-color: #1db954;
+  background-color: #FFCE00;
   color: #ffffff;
   width: 200px;
   margin: 10px auto;
@@ -53,16 +52,18 @@
 
 .playButton:hover {
   transform: scale(1.06);
-  background-color: #1db954;
+  background-color: #F9B835;
 }
 .playButton:active {
-  background-color: #1db954;
-  border: #1db954;
+  background-color: #FFCE00;
+  border: #FFCE00;
 }
 .playButton:focus {
   outline: none;
 }
-
+.inline{
+  display: inline;
+}
 .playlistHeaderBodyBottom {
   text-align: center;
 }
@@ -70,7 +71,8 @@
   max-width: 320px;
   max-height: 320px;
   margin: 10px auto;
-
+  min-width: 200px;
+  min-height: 200px;
   width: 100%;
 }
 
@@ -80,42 +82,23 @@
   max-height: 340px;
 }
 
-.playlist {
-  font-family: "Helvetica Neue";
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background: rgb(125, 126, 125);
-  background: -moz-linear-gradient(
-    -45deg,
-    rgba(125, 126, 125, 1) 0%,
-    rgba(14, 14, 14, 1) 100%
-  );
-  background: -webkit-linear-gradient(
-    -45deg,
-    rgba(125, 126, 125, 1) 0%,
-    rgba(14, 14, 14, 1) 100%
-  );
-  background: linear-gradient(
-    135deg,
-    rgba(125, 126, 125, 1) 0%,
-    rgba(14, 14, 14, 1) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=1 );
-  background-attachment: fixed;
-}
 .likeIcon {
   margin: 10px;
   padding: 0px;
   background-color: transparent;
   border: none;
+  color: #FFCE00;
 }
+
 
 .likeIcon:focus {
   outline: none;
 }
+
+.likeIcon:hover{
+  transform: scale(1.3);
+
+}
 .gray-text {
-  color: rgb(125, 126, 125);
+  color: #916B49;
 }
