--- a/oudfrontend/src/components/ForgetPassword/forgetPass.css
+++ b/oudfrontend/src/components/ForgetPassword/forgetPass.css
@@ -1,5 +1,3 @@
-
-
 .btn.btn-outline-linkF {
   background-color: #f9b835;
   border-radius: 50px;
@@ -16,6 +14,26 @@
 
 .btn.btn-outline-links:hover {
   background-color: #ffca60;
+}
+.forgetForm{
+  padding-top: 60px;
+}
+
+.OudImage {
+  width: 13%;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  align-items: center;
+}
+
+.bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  background-color: black;
 }
 
 .btn.btn-outline-links {
