🐛 Fix Dropdown doesn't appear in navbar

--- a/oudfrontend/src/components/Home/Navbar/Navbar.css
+++ b/oudfrontend/src/components/Home/Navbar/Navbar.css
@@ -139,7 +139,8 @@ input.empty {
 }
 
 .dropdown-me {
-  left: -30px;
+  left: -30px !important;
+  /* right: 200px !important; */
   top: 50px;
   background: #ca8e15;
 }
