--- a/oudfrontend/src/components/WebPlayer/Queue/Queue.css
+++ b/oudfrontend/src/components/WebPlayer/Queue/Queue.css
@@ -1,5 +1,5 @@
 .queue-container {
-  background-color: #6c6c6c;
+  background-color: #424242;
   bottom: 100px;
   position: fixed;
   z-index: 3;
@@ -9,7 +9,7 @@
   position: fixed;
   bottom: 75px;
   right: 0;
-  background-color: #6c6c6c;
+  background-color: #424242;
   /* background-color: rgba(0, 0, 0, 0.9); */
   overflow-y: scroll;
   overflow-x: hidden;
@@ -61,7 +61,7 @@
   top: 60px;
 }
 .track {
-  background: #6c6c6c;
+  background: #424242;
   width: 100%;
   z-index: 5;
   height: 4.56em;
