--- a/oudfrontend/src/pages/Search/Search.css
+++ b/oudfrontend/src/pages/Search/Search.css
@@ -18,3 +18,16 @@
   width: 100%;
   font-size: 30px;
 }
+.sub-header {
+  display: flex;
+  font-size: 28px;
+  line-height: 1.6;
+  font-weight: 600;
+  letter-spacing: -0.36px;
+  color: #fff;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 70%;
+  flex: 1 0 70%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
