--- a/oudfrontend/src/components/WebPlayer/Player/Player.css
+++ b/oudfrontend/src/components/WebPlayer/Player/Player.css
@@ -208,21 +208,22 @@ button:focus {
   position: fixed;
   bottom: 99px;
   transition: 0.5s ease;
-  height: 35%;
-  width: 35%;
+  min-width: 14rem;
+  width: 14rem;
   background-size: cover;
 }
 .thumb-img {
   position: relative;
   /* bottom: 99px; */
-  max-width: 35%;
+  /* max-width: 35%; */
   background-size: cover;
-  width: 100%;
+  width: -webkit-fill-available;
   height: 100%;
 }
 .close-thumb {
   position: absolute;
-  left: 29%;
+  float: right;
+  right: 0;
   top: 3%;
   background: transparent;
   border: none;
