--- a/oudfrontend/src/components/WebPlayer/Queue/Queue.css
+++ b/oudfrontend/src/components/WebPlayer/Queue/Queue.css
@@ -32,7 +32,7 @@
 .queue-container .overlay a {
   padding: 8px;
   text-decoration: none;
-  font-size: 36px;
+  font-size: 26px;
   color: #818181;
   display: block;
   transition: 0.3s;
@@ -108,7 +108,7 @@
   display: initial;
   padding: 8px;
   text-decoration: none;
-  font-size: 36px;
+  font-size: 26px;
   color: rgb(245, 243, 243);
   animation: trackmove;
 }
@@ -136,7 +136,7 @@
 .track .content .artist-name a {
   padding: 8px;
   text-decoration: none;
-  font-size: 0.9em;
+  font-size: 0.8em;
   color: #a0a0a0;
 }
 .open-nav-btn {
@@ -148,6 +148,7 @@
   cursor: row-resize;
   display: inherit;
   height: 24px;
+  width: 40px;
   background-size: cover;
   position: relative;
   top: 32%;
