integration with bak-end
-Account integration with back end

--- a/oudfrontend/src/components/Account/Components/HiddenSideBar/HiddenSideBar.css
+++ b/oudfrontend/src/components/Account/Components/HiddenSideBar/HiddenSideBar.css
@@ -17,6 +17,8 @@
   width: 5%;
   margin-bottom: 0;
   border: #ffffff;
+  height: 50px;
+  width: 5%;
 }
 .dropdownButtonSideBar {
   color: #000000;
@@ -27,6 +29,7 @@
   width: 95%;
   margin-bottom: 0;
   border: #ffffff;
+  height: 50px;
 }
 .dropdownButtonSideBar:hover {
   background-color: #ffffff;
