--- a/oudfrontend/src/components/commonComponents/song/song.css
+++ b/oudfrontend/src/components/commonComponents/song/song.css
@@ -82,30 +82,34 @@
 #songDropdownButton{
     padding-bottom: 10px;
 }
+
 .dropdown {
     position: relative;
-    display: inline-block;
     font-size: 14px;
 }
 .dropdownContent {
-    position: sticky;
-    background-color: #f1f1f1/*#282828*/;
-    min-width: 160px;
+    position: relative;
+    right:140px;
+    bottom:30px;
+    background-color: #282828;
+    min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     padding: 5px 0px;
     text-align: left;
+
   }
   
   /* Links inside the dropdown */
   .dropdownContent .SongDropdownItem{
-    color: black;
+    color: #FFCE00;
     padding: 5px 5px 0px 7px;
     text-decoration: none;
-    display: block;
-    width: 100%;
     text-align: left;
+    width:100%
   }
   /* Change color of dropdown links on hover */
-.dropdownContent .SongDropdownItem:hover {background-color: #ddd;}
+.dropdownContent .SongDropdownItem:hover {
+    color:white;
+    background-color: #424242;}
 
