--- a/oudfrontend/src/pages/Artist/Artist.css
+++ b/oudfrontend/src/pages/Artist/Artist.css
@@ -62,3 +62,8 @@
 .artis-overview .SEE-ALL-Overview {
   cursor: pointer;
 }
+.artist-appears-on,
+.artist-singles,
+.artist-compilation {
+  margin-top: 2%;
+}
