--- a/oudfrontend/src/pages/Artist/Artist.css
+++ b/oudfrontend/src/pages/Artist/Artist.css
@@ -33,6 +33,30 @@
   float: left;
   margin-right: 10px;
 }
+.artist-user .upperContainerProfile {
+  -webkit-box-align: center;
+  position: relative;
+  align-items: center;
+  background-size: cover;
+  background-position: 50%;
+}
+/* .artist-user .upperContainerProfile::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(-30%, transparent),
+    to(#121212)
+  );
+  background: linear-gradient(transparent -30%, #121212);
+  box-sizing: initial;
+} */
 .artist-user .upperContainerProfile h1 {
   font-size: 50px;
   font-weight: 1000;
