--- a/oudfrontend/src/components/Welcome/welcome.css
+++ b/oudfrontend/src/components/Welcome/welcome.css
@@ -189,7 +189,7 @@
   margin: 0 auto;
   left: 0;
   right: 0;
-  top: 30%;
+  top: 14%;
   text-align: center;
   color: white;
 }
@@ -217,7 +217,7 @@
   margin: 0 auto;
   left: 0;
   right: 0;
-  top: 40%;
+  top: 14%;
   text-align: center;
   color: white;
 }
@@ -277,7 +277,7 @@
 
 @media (max-width: 1100px) {
   .welcomeTextUser {
-    top: 24%;
+    top: 14%;
   }
 
   .welcomeTextUser button {
@@ -286,7 +286,7 @@
   }
 
   .welcomeTextGeust {
-    top: 35%;
+    top: 14%;
   }
 
   h1 {
@@ -317,16 +317,22 @@
   }
 
   .welcomeTextUser {
-    top: 25%;
+    top: 14%;
   }
 }
 
 @media (max-width: 550 px) {
   .welcomeTextUser {
-    top: 20%;
+    top: 14%;
   }
 
   .welcomeTextGeust {
-    top: 33%;
+    top: 14%;
   }
+}
+.user-image {
+  margin-top: -1px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
