--- a/oudfrontend/src/pages/Account/Account.css
+++ b/oudfrontend/src/pages/Account/Account.css
@@ -69,6 +69,7 @@ h2 {
   text-align: left;
 }
 .account {
+  padding-top: 60px;
   background-color: #916b49;
   background-image: linear-gradient(#916b49, #000000);
 }
