--- a/oudfrontend/src/components/Welcome/welcome.css
+++ b/oudfrontend/src/components/Welcome/welcome.css
@@ -103,7 +103,7 @@
 .middle {
   transition: 0.5s ease;
   position: absolute;
-  top: 50%;
+  top: 48%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -176,6 +176,7 @@
 
 .backGround {
   width: 100%;
+  margin-top: 70px;
 }
 
 .BodyStyle {
@@ -189,7 +190,7 @@
   margin: 0 auto;
   left: 0;
   right: 0;
-  top: 14%;
+  top: 12%;
   text-align: center;
   color: white;
 }
@@ -217,7 +218,7 @@
   margin: 0 auto;
   left: 0;
   right: 0;
-  top: 30%;
+  top: 22%;
   text-align: center;
   color: white;
 }
@@ -277,7 +278,7 @@
 
 @media (max-width: 1100px) {
   .welcomeTextUser {
-    top: 14%;
+    top: 12%;
   }
 
   .welcomeTextUser button {
@@ -286,7 +287,7 @@
   }
 
   .welcomeTextGeust {
-    top: 30%;
+    top: 22%;
   }
 
   h1 {
@@ -317,17 +318,20 @@
   }
 
   .welcomeTextUser {
-    top: 14%;
+    top: 8%;
   }
 }
 
 @media (max-width: 550 px) {
   .welcomeTextUser {
-    top: 14%;
+    top: 12%;
   }
 
   .welcomeTextGeust {
     top: 14%;
+  }
+  .oudLogoBody{
+    width: 10%;
   }
 }
 
@@ -340,6 +344,6 @@
 
 .oudLogoBody {
   z-index: 9999;
-  width: 10%;
+  width: 20%;
   margin-bottom: 10px;
 }
