--- a/oudfrontend/src/components/Welcome/welcome.css
+++ b/oudfrontend/src/components/Welcome/welcome.css
@@ -203,7 +203,8 @@
   border-radius: 50px;
   font-size: 25px;
   color: white;
-  font-family: "Lalezar", cursive;
+  font-family: 'Raleway',
+    sans-serif;
   align-items: center;
   align-content: center;
   margin-top: 7px;
@@ -218,7 +219,7 @@
   margin: 0 auto;
   left: 0;
   right: 0;
-  top: 22%;
+  top: 24%;
   text-align: center;
   color: white;
 }
@@ -287,7 +288,7 @@
   }
 
   .welcomeTextGeust {
-    top: 22%;
+    top: 24%;
   }
 
   h1 {
@@ -328,9 +329,10 @@
   }
 
   .welcomeTextGeust {
-    top: 14%;
+    top: 16%;
   }
-  .oudLogoBody{
+
+  .oudLogoBody {
     width: 10%;
   }
 }
